--- a/app/src/main/res/layout/dialog_check_permission.xml
+++ b/app/src/main/res/layout/dialog_check_permission.xml
@@ -9,12 +9,12 @@
         android:layout_width="300dp"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/blue_grey_200"
         app:cardElevation="3dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/blue_grey_200">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -42,6 +42,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:text="@string/name"
+                        android:textStyle="bold"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
                     <TextView
@@ -63,6 +64,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:text="IP:"
+                        android:textStyle="bold"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
                     <TextView
@@ -83,6 +85,7 @@
                     android:gravity="center_horizontal"
                     android:text="@string/files"
                     android:layout_marginTop="5dp"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
                 <android.support.v7.widget.RecyclerView
